Criação do arquivo style.css, alteração body index

--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -24,8 +24,11 @@
         <title>Dashboard</title>
       </head>
 <body>
-    <div>
-        <h1>Olá mundo</h1>
+    <div id="page-content-wrapper">
+      <div class="container-fluid px-4">
+        <h1>Olá mundo aaaa</h1>
+      </div>
+        
     </div>
     
 </body>
