--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -1,28 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
-    <title>Dashboard</title>
-  </head>
   <body>
     <!--Header contendo dividido em grid contendo uma linha e 
       duas colunas sendo respectivamente, imagem com a logo e 
@@ -116,11 +93,7 @@
             <div class="card-body">
               <h5 class="card-title">Gráfico Atual</h5>
               <p class="card-text">
-                <img
-                  src="img/grafico_atual.png"
-                  class="img-fluid"
-                  alt="grafico atual"
-                />
+                {{inputgrafico}}
               </p>
             </div>
           </div>
@@ -131,11 +104,6 @@
             <div class="card-body">
               <h5 class="card-title">Gráfico Predição</h5>
               <p class="card-text">
-                <img
-                  src="img/grafico_predicao.png"
-                  class="img-fluid"
-                  alt="grafico predicao"
-                />
               </p>
             </div>
           </div>
@@ -149,11 +117,7 @@
             <div class="card-body">
               <h5 class="card-title">Gráfico Atual</h5>
               <p class="card-text">
-                <img
-                  src="img/grafico_atual.png"
-                  class="img-fluid"
-                  alt="grafico atual"
-                />
+                {{grafico_barra}}
               </p>
             </div>
           </div>
@@ -164,11 +128,7 @@
             <div class="card-body">
               <h5 class="card-title">Gráfico Predição</h5>
               <p class="card-text">
-                <img
-                  src="img/grafico_predicao.png"
-                  class="img-fluid"
-                  alt="grafico predicao"
-                />
+                
               </p>
             </div>
           </div>
