alteracao na cor, css !important, caminho arquivo.

--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -18,7 +18,7 @@
       duas colunas sendo respectivamente, imagem com a logo e 
       um input em tempo real com a data de inicio dos graficos
     -->
-    <header class="bg-custom">
+    <header >
       <div class="row mt-3">
         <div class="col-3">
           <img
@@ -48,11 +48,11 @@
         <!--coluna 1-->
         <div class="col-4">
           <div class="row my-2">
-            <div class="card ">
+            <div class="card">
               <div class="card-body ">
                 <h5 class="card-title">Total Bolsas</h5>
                 <span class="material-icons"> bloodtype </span>
-                <p class="card-text">{{total_2020}} bolsas</p>
+                <p class="card-text">{{total}} bolsas</p>
               </div>
             </div>
           </div>
