--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -30,7 +30,6 @@
         <!--end = alinhado a direita-->
         <div class="col-9 text-end">
           <div class="form-group">
-            <label for="ano">Selecione o ano:</label>
             {{intervalo_tempo}}
           </div>
         </div>
@@ -41,73 +40,8 @@
           my-2 = margin vertical, espaçamento entre as linhas.
           Uma linha com 3 colunas, cada coluna com 2 linhas
       -->
-      <div class="row g-5 my-5">
-        <!--coluna 1-->
-        <div class="col-4">
-          <div class="row my-2">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Total Bolsas</h5>
-                <span class="material-icons"> bloodtype </span>
-                <p class="card-text">{{card}} bolsas</p>
-              </div>
-            </div>
-          </div>
-          <div class="row my-2">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Mediana</h5>
-                <span class="material-icons"> medication_liquid </span>
-                <p class="card-text">576 bolsas</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--coluna 2-->
-        <div class="col-4">
-          <div class="row my-2">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Total plaquetas aferese</h5>
-                <span class="material-icons"> bloodtype </span>
-                <p class="card-text">254 bolsas</p>
-              </div>
-            </div>
-          </div>
-          <div class="row my-2">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Minimo</h5>
-                <span class="material-icons"> bloodtype </span>
-                <p class="card-text">540 bolsas</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--coluna 3-->
-        <div class="col-4">
-          <div class="row my-2">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Maximo</h5>
-                <span class="material-icons"> bloodtype </span>
-
-                <p class="card-text">3580 bolsas</p>
-              </div>
-            </div>
-          </div>
-          <div class="row my-2">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Média doação</h5>
-                <span class="material-icons"> date_range </span>
-
-                <p class="card-text"></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <!--Cards feito no shiny Rstudio-->
+      {{card}}
       <!--3º divisao - Graficos de linha-->
       <div class="row">
         <!--apresentar grafico atual de linha-->
@@ -115,6 +49,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Gráfico Atual</h5>
+              <p class="card-text">{{graficogg}}</p>
             </div>
           </div>
         </div>
