--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -29,9 +29,7 @@
         </div>
         <!--end = alinhado a direita-->
         <div class="col-9 text-end">
-          <div class="form-group">
-            {{intervalo_tempo}}
-          </div>
+          <div class="form-group">{{intervalo_tempo}}</div>
         </div>
       </div>
     </header>
@@ -48,8 +46,8 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Gráfico Atual</h5>
-              <p class="card-text">{{graficogg}}</p>
+              <h5 class="card-title">Bolsas de sangue aferese</h5>
+              <p class="card-text">{{grafico_linha2}}</p>
             </div>
           </div>
         </div>
@@ -57,8 +55,8 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Gráfico Predição</h5>
-              <p class="card-text"></p>
+              <h5 class="card-title">Bolsas de sangue total</h5>
+              <p class="card-text">{{grafico_linha}}</p>
             </div>
           </div>
         </div>
@@ -70,9 +68,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Gráfico Atual</h5>
-              <p class="card-text">
-                <img />
-              </p>
+              <p class="card-text"></p>
             </div>
           </div>
         </div>
