alteracao no grafico

--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -30,8 +30,6 @@
               <a href="#graficos">Graficos</a> |
               <a href="#sobre">Sobre</a>
             </nav>
-            <!-- Suporte ou ajuda -->
-            <a href="#help">Ajuda</a>
         </div>
       </div>
     </header>
@@ -59,20 +57,20 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Bolsas de sangue total</h5>
-              <p class="card-text">{{grafico_linha}}</p>
+              <h5 class="card-title">Bolsas de sangue total com previsão</h5>
+              <p class="card-text">{{grafico_previsao}}</p>
             </div>
           </div>
         </div>
       </div>
       <!--4º divisao - Graficos de barras-->
-      <div class="row">
+      <div class="row g-4 my-2">
         <!--apresentar grafico atual de barras-->
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Bolsas de sangue total com previsão</h5>
-              <p class="card-text">{{grafico_previsao}}</p>
+              <h5 class="card-title">Bolsas de sangue aferese barras</h5>
+              <p class="card-text">{{grafico_linha}}</p>
             </div>
           </div>
         </div>
