--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -69,8 +69,8 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Bolsas de sangue aferese barras</h5>
-              <p class="card-text">{{grafico_linha}}</p>
+              <h5 class="card-title">Bolsas de sangue total barras</h5>
+              <p class="card-text">{{grafico_barra_total}}</p>
             </div>
           </div>
         </div>
@@ -78,7 +78,7 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Gráfico Predição</h5>
+              <h5 class="card-title">Bolsas de sangue total aferese</h5>
               <p class="card-text"></p>
             </div>
           </div>
