organização do codigo

--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -21,15 +21,18 @@
     <header>
       <div class="row mt-3">
         <div class="col-3">
-          <img src="img/logo.png" class="img-fluid w-75 float-start" alt="logo" />
+          <img
+            src="img/logo.png"
+            class="img-fluid w-75 float-start"
+            alt="logo"
+          />
         </div>
         <div class="col-9 text-end">
-            <!-- Menu de navegação -->
-            <nav>
-              <a href="#home">Home</a> |
-              <a href="#graficos">Graficos</a> |
-              <a href="#sobre">Sobre</a>
-            </nav>
+          <!-- Menu de navegação -->
+          <nav>
+            <a href="#home">Home</a> | <a href="#graficos">Graficos</a> |
+            <a href="#sobre">Sobre</a>
+          </nav>
         </div>
       </div>
     </header>
@@ -48,8 +51,8 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Bolsas de sangue aferese</h5>
-              <p class="card-text">{{grafico_linha2}}</p>
+              <h5 class="card-title">Bolsas de sangue total com previsão</h5>
+              <p class="card-text">{{grafico_previsao}}</p>
             </div>
           </div>
         </div>
@@ -57,8 +60,8 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Bolsas de sangue total com previsão</h5>
-              <p class="card-text">{{grafico_previsao}}</p>
+              <h5 class="card-title">Bolsas plaquetas aférese</h5>
+              <p class="card-text">{{grafico_linha2}}</p>
             </div>
           </div>
         </div>
@@ -69,7 +72,7 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Bolsas de sangue total barras</h5>
+              <h5 class="card-title">Bolsas de sangue total</h5>
               <p class="card-text">{{grafico_barra_total}}</p>
             </div>
           </div>
@@ -78,8 +81,8 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Bolsas de sangue total aferese</h5>
-              <p class="card-text"></p>
+              <h5 class="card-title">Bolsas plaquetas aférese</h5>
+              <p class="card-text">{{grafico_barra_aferese}}</p>
             </div>
           </div>
         </div>
@@ -87,8 +90,12 @@
     </div>
     <footer class="footer mt-auto py-3">
       <div class="container text-center">
-        <span style="color: black;">Desenvolvido por Caleb Falcão e Rafael Silva</span><br>
-        <span style="color: black;">&copy; 2023 Todos os direitos reservados</span>
+        <span style="color: black"
+          >Desenvolvido por Caleb Falcão e Rafael Silva</span
+        ><br />
+        <span style="color: black"
+          >&copy; 2023 Todos os direitos reservados</span
+        >
       </div>
     </footer>
   </body>
