--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -20,7 +20,7 @@
     -->
     <header>
       <div class="row mt-3">
-        <div class="col-3">
+        <!--<div class="col-3">
           <img
             src="img/logo.png"
             class="img-fluid w-75 float-start"
@@ -28,12 +28,12 @@
           />
         </div>
         <div class="col-9 text-end">
-          <!-- Menu de navegação -->
+           Menu de navegação
           <nav>
             <a href="#home">Home</a> | <a href="#graficos">Graficos</a> |
             <a href="#sobre">Sobre</a>
           </nav>
-        </div>
+        </div>-->
       </div>
     </header>
     <div class="container-fluid px-4" id="graficos">
