--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -19,8 +19,8 @@
       um input em tempo real com a data de inicio dos graficos
     -->
     <header>
-      <div class="row mt-3">
-        <!--<div class="col-3">
+      <!--<div class="row mt-3">
+        <<div class="col-3">
           <img
             src="img/logo.png"
             class="img-fluid w-75 float-start"
@@ -33,8 +33,8 @@
             <a href="#home">Home</a> | <a href="#graficos">Graficos</a> |
             <a href="#sobre">Sobre</a>
           </nav>
-        </div>-->
-      </div>
+        </div>
+      </div>-->
     </header>
     <div class="container-fluid px-4" id="graficos">
       <!--g = gutter 3, espaçamento entre as colunas
@@ -46,22 +46,22 @@
       <!--Range da data-->
       {{intervalo_tempo}}
       <!--3º divisao - Graficos de linha-->
-      <div class="row">
+      <div class="row ">
         <!--apresentar grafico atual de linha-->
-        <div class="col">
+        <div class="col ">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bolsas de sangue total com previsão</h5>
-              <p class="card-text">{{grafico_previsao}}</p>
+              <p class="card-text">{{graficoLinhaTotal}}</p>
             </div>
           </div>
         </div>
         <!--apresentar grafico predicao de linha-->
-        <div class="col">
+        <div class="col ms-5">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bolsas plaquetas aférese</h5>
-              <p class="card-text">{{grafico_linha2}}</p>
+              <p class="card-text">{{graficoLinhaAferese}}</p>
             </div>
           </div>
         </div>
@@ -78,7 +78,7 @@
           </div>
         </div>
         <!--apresentar grafico predicao de barras-->
-        <div class="col">
+        <div class="col ms-5">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bolsas plaquetas aférese</h5>
