--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -54,6 +54,7 @@
       <!--Range da data-->
       <div class="row justify-content-center align-items-center g-2 ">
         <div class="col">{{intervalo_tempo}}</div>
+        <div class="col">{{bt_modelo}}</div>
         <div class="col d-flex justify-content-end">
           {{intervalo_tempo_aferese}}
         </div>
