--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -1,23 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
-  <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-  </head>
-
   <body>
-    <!--Header contendo dividido em grid contendo uma linha e 
-      duas colunas sendo respectivamente, imagem com a logo e 
-      um input em tempo real com a data de inicio dos graficos
-    -->
     <header>
       <div class="containerhead">
         <img
@@ -28,32 +11,14 @@
         <div class="texto"><h1 class="texto_sangue">Gestão de Sangue</h1></div>
       </div>
     </header>
-    <!--<div class="row mt-3">
-        <<div class="col-3">
-          <img
-            src="img/logo.png"
-            class="img-fluid w-75 float-start"
-            alt="logo"
-          />
-        </div>
-        <div class="col-9 text-end">
-           Menu de navegação
-          <nav>
-            <a href="#home">Home</a> | <a href="#graficos">Graficos</a> |
-            <a href="#sobre">Sobre</a>
-          </nav>
-        </div>
-      </div>-->
     <div class="container-fluid px-4 mx-auto" style="width: 95%" id="graficos">
-      <!--g = gutter 3, espaçamento entre as colunas
-          my-2 = margin vertical, espaçamento entre as linhas.
-          Uma linha com 3 colunas, cada coluna com 2 linhas
-      -->
+
       <!--Cards feito no shiny Rstudio-->
-      {{card}}
+      {{cards}}
+
       <!--Range da data-->
       <div class="row justify-content-center align-items-center g-2 ">
-        <div class="col">{{intervalo_tempo}}</div>
+        <div class="col">{{intervalo_tempo_total}}</div>
         <div class="col">{{bt_modelo}}</div>
         <div class="col d-flex justify-content-end">
           {{intervalo_tempo_aferese}}
@@ -62,6 +27,7 @@
 
       <!--3º divisao - Graficos de linha-->
       <div class="row">
+
         <!--bolsa total-->
         <div class="col">
           <div class="card">
@@ -71,6 +37,7 @@
             </div>
           </div>
         </div>
+
         <!--bolsa aférese-->
         <div class="col">
           <div class="card">
@@ -81,8 +48,10 @@
           </div>
         </div>
       </div>
+
       <!--4º divisao - Graficos de barras-->
       <div class="row g-4 my-2">
+
         <!--apresentar grafico atual de barras-->
         <div class="col">
           <div class="card">
@@ -92,6 +61,7 @@
             </div>
           </div>
         </div>
+        
         <!--apresentar grafico predicao de barras-->
         <div class="col">
           <div class="card">
