--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -19,7 +19,7 @@
       <!--Range da data-->
       <div class="row justify-content-center align-items-center g-2 ">
         <div class="col">{{intervalo_tempo_total}}</div>
-        <div class="col">{{bt_modelo}}</div>
+        <div class="col d-flex justify-content-center">{{addDados}}</div>
         <div class="col d-flex justify-content-end">
           {{intervalo_tempo_aferese}}
         </div>
@@ -57,7 +57,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bolsas Sangue Total</h5>
-              <p class="card-text">{{grafico_barra_total}}</p>
+              <p class="card-text">{{grafSazonalTotal}}</p>
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bolsas Plaquetas Aférese</h5>
-              <p class="card-text">{{grafico_barra_aferese}}</p>
+              <p class="card-text">{{grafSazonalAferese}}</p>
             </div>
           </div>
         </div>
