--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -12,14 +12,14 @@
       </div>
     </header>
     <div class="container-fluid px-4 mx-auto" style="width: 95%" id="graficos">
-
+      
       <!--Cards feito no shiny Rstudio-->
       {{cards}}
-
+      
       <!--Range da data-->
       <div class="row justify-content-center align-items-center g-2 ">
         <div class="col">{{intervalo_tempo_total}}</div>
-        <div class="col d-flex justify-content-center">{{addDados}}</div>
+        <!--<div class="col d-flex justify-content-center">{{addDados}}</div>-->
         <div class="col d-flex justify-content-end">
           {{intervalo_tempo_aferese}}
         </div>
@@ -74,14 +74,14 @@
       </div>
     </div>
     <footer class="footer mt-auto py-3">
-      <div class="container text-center">
+      <!--<div class="container text-center">
         <span style="color: black"
           >Desenvolvido por Caleb Falcão e Rafael Silva</span
         ><br />
         <span style="color: black"
           >&copy; 2023 Todos os direitos reservados</span
         >
-      </div>
+      </div>-->
     </footer>
   </body>
 </html>
