mape e media de erro bolsas

--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -46,11 +46,9 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-center align-items-center g-2  d-flex justify-content-center">
-        <div class="col">Erro Médio (MAPE): <div id="mapeSangueTotal"></div> / Erro aproximado em Nº de bolsas: 223</div>
-        <!--<div class="col d-flex justify-content-center">{{addDados}}</div>-->
-        <div class="col">Erro Médio (MAPE): 5,34% / Erro aproximado em Nº de bolsas: 223</div>
-      </div>
+
+      {{mapeTotal}}
+
       <!--4º divisao - Graficos de sazonalidade-->
       <div class="row g-4 my-2">
         <!--apresentar grafico de sazonalidade-->
