--- a/hemocentro/www/index.html
+++ b/hemocentro/www/index.html
@@ -48,14 +48,14 @@
       </div>
 
       {{mapeTotal}}
-
+      <hr style="border: none; border-top: 2px dashed #aa1f1f; color: #aa1f1f; background-color: #aa1f1f;">
       <!--4º divisao - Graficos de sazonalidade-->
       <div class="row g-4 my-2">
         <!--apresentar grafico de sazonalidade-->
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Bolsas Sangue Total</h5>
+              <h5 class="card-title">Gráfico Sazonal - Nº Bolsas Sangue Total</h5>
               <p class="card-text">{{grafSazonalTotal}}</p>
             </div>
           </div>
@@ -65,7 +65,7 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Bolsas de Plaquetas</h5>
+              <h5 class="card-title">Gráfico Sazonal - Nº Bolsas Sangue Aférese</h5>
               <p class="card-text">{{grafSazonalAferese}}</p>
             </div>
           </div>
